styles/all.css
/*********************************************
		Tag Resets and Normalizations.
**********************************************/

div,
h1,
h2,
h3,
h4,
h5,
h6,
p,
blockquote,
pre,
dl,
dt,
dd,
ol,
ul,
li,
fieldset,
form,
label,
legend,
th,
td,
article,
aside,
figure,
footer,
header,
hgroup,
menu,
nav,
object,
section
{
	margin: 0;
	padding: 0;
	border: 0;
}

img
{
	max-width: 100%;
}

h1, h2, h3, h4, h5, h6
{
	font-weight: 100;
}

section footer
{
	clear: both;
}


/****************************************
		impose a Vertical Rhythm.
*****************************************/

/* establishing a baseline of 16/16. */

html
{
	height: 100%;
	/*font-family: sans-serif;*/
	font-size: 100%;				/* http://filamentgroup.com/lab/how_we_learned_to_leave_body_font_size_alone/ */
	line-height: 1;					/* http://meyerweb.com/eric/thoughts/2008/05/06/line-height-abnormal/ */
	-moz-text-size-adjust: 100%;
	-ms-text-size-adjust: 100%;		/* https://developer.mozilla.org/en-US/docs/CSS/text-size-adjust */
	-webkit-text-size-adjust: 100%;
}

/* calculations on my scaled baseline. */

/* my original sizing choices made by eye: 
p
{
	font-size: 24px;	[ 24 / 16 = 1.5 ]
	line-height: 36px;	[ 36 / 24 = 1.5 ]
}

therefore, the scale is 1.5 x 1.5 =	2.25	: 100%
									1.6875	:  75%
									1.125	:  50%
									0.5625	:  25%
*/

p, li, h3
{
	font-size: 1.5em;
	line-height: 1.5;
}

h1
{
	/*font-size: 3.6875em;*/
	/*line-height: 1.2203389830508474576271186440678;	// ( 72px / 16px ) / this f-s.*/

	/*font-size: 3em;*/
	/*line-height: 1.5;*/	/* ( 72px / 16px ) / this f-s. */

	font-size: 3.375em;								/* 100% scale * <p> f-s */
	line-height: 1.3333333333333333333333333333333;	/* ( 100% scale * 2 [ because this f-s is larger than 1 baseline, therefore it must consume 2 baselines ] ) / this f-s.*/
}

h2
{
	font-size: 4.5em;
	line-height: 1;		/* ( 72px / 16px ) / this f-s. */
}

h4, #footer p
{
	font-size: 1.25em;
	line-height: 1.8025; /* (note, i found it impossible figure out a calc. that successfully worked here! so, i just came up w/ this number through trial & error.) */
}

h5
{
	font-size: 1em;
	line-height: 2.25;	/* == <p> line-height / ( this font-size / <p> font-size ) [ == 1.5 / ( 1 / 1.5 ) = 2.25 ] */
	white-space: nowrap;
}


/*************************
		colorway.
**************************/

/* <!-- body --> */

body
{
	background-color: #333;
}

	/* colorway #2 */

	body.cw02
	{
		background-color: #585858;
	}

/* <!-- Navigation, top --> */

#container-nav
{
	color: #8d8d8d;
	background-color: #333;
}
	#container-nav.cw02
	{
		color: #333;
		background-color: #777;
	}

#color-swap
{
	float: left;
	min-width: 22px;
	width: 1.8025em;
	height: 22px;
	margin: 1em 0 0 0;
	background-color: #802f4c;
	cursor: pointer;
}
	#color-swap.cw02
	{
		background-color: #94997e;
	}

#nav button
{
	background-color: transparent;
	transition: 0.225s;
}
	#exampl-btn
	{
		color: #35ddcb; /* s/a the sect. it links to (below). */
	}
		#exampl-btn.cw02
		{
			color: #ff5769;
		}
	#expert-btn
	{
		color: #32d298; /* s/a the sect. it links to (below). */
	}
		#expert-btn.cw02
		{
			color: #ff0069;
		}
	#nav button:hover
	{
		background-color: #4d4d4d;
	}
		#nav button.cw02:hover
		{
			background-color: #878787;
		}

/* <!-- Header --> */

#container-header
{
	color: #000;
	background-color: #fff;
	overflow: hidden;
}

#headshot
{
	display: block;
	width: 72px;
	height: 72px;
	background-image: url( ../images/photo.gif );
}

/* <!-- Main "Body" --> */

#examples
{
	color: #35ddcb;
	background-color: #606060;
}
	#examples .reversal
	{
		color: #606060;
		background-color: #35ddcb;
	}

	/* colorway #2 */

	#examples.cw02
	{
		color: #ff5769;
		background-color: #333;
	}
		#examples .reversal.cw02
		{
			background-color: #ff5769;
			color: #333;
		}

#examples button
{
	background-color: transparent;
	transition: 0.225s;
}
	#examples button:hover
	{
		color: #999;
	}
	#examples button p
	{
		padding-left: 0.13em;
	}

#expertise
{
	color: #32d298;
	background-color: #606060;
}
	#expertise .reversal
	{
		color: #606060;
		background-color: #32d298;
	}
	#expertise .dimmed h4
	{
		color: #606060;
		background-color: #94997e;
	}
	#expertise .dimmed ul
	{
		color: #94997e;
	}

	/* colorway #2 */

	#expertise.cw02
	{
		color: #ff0069;
		background-color: #333;
	}
		#expertise .reversal.cw02
		{
			color: #333;
			background-color: #ff0069;
		}

		#expertise h4.cw02 /* .dimmed */
		{
			color: #333;
			background-color: #9e0039;
		}
		#expertise ul.cw02 /* .dimmed */
		{
			color: #9e0039;
		}

/* <!-- Footer | Navigation, bottom --> */

#container-footer
{
	color: #8d8d8d;
	background-color: #333;
}

	/* colorway #2 */

	#container-footer.cw02
	{
		color: #8d8d8d;
		background-color: #585858;
	}


/************************************
		other general styles.
*************************************/

/* <!-- fundamental body styles. --> */

body
{
	min-height: 100%;
	font-family: MuseoSans, Helvetica, Verdana, Arial, sans-serif;
}


/* <!-- classes, and other multi-section- and non-section-specific styles. --> */

button img,
button p
{
	display: inline;
}

.wrapper
{
	padding: 0 0.5625em;
	-webkit-box-sizing: border-box;
	-moz-box-sizing: border-box;
	-o-box-sizing: border-box;
	-ms-box-sizing: border-box;
	box-sizing: border-box;
}

.wrapper .box
{
	margin: 0 1.125em;
}

.box h4
{
	margin-bottom: 0.90125em;
}
.box ul
{
	list-style: none;
}

.hidden
{
	display: none;
}

#nav, #header, #footer
{
	margin: 0 1.125em;
}
	#nav
	{
		margin-right: 0;
	}


/* <!-- font assignment. --> */

p, #expertise li
{
	font-family: MuseoSans;
}

h1,
h2,
h3,
h5,
h6
{
	font-family: Mangerica;
}
h4, .tooltip /* moved the .tooltip's font-assignment to here, so that ea. font is only called once (to see if that makes font-loading more efficient.) */
{
	font-family: MuseoSlabItalic;
}


/***************************************
		content-specific styles.
****************************************/

/* <!-- Navigation, top --> */

#nav
{
	padding: 0;
}

#nav h3
{
	display: inline;
	line-height: 2.25;
	white-space: nowrap;
}

#nav-buttons
{
	display: inline;
	float: right;
	white-space: nowrap;
}

#nav button
{
	display: inline;
	padding: 0 1.125em;
	border: 0;
}


/* <!-- Header --> */

#container-header
{
	width: 100%;
	padding: 1.125em 0;
}
	#header h1, #footer p /* moved the #footer p's font-assignment to here, so that ea. font is only called once (to see if that makes font-loading more efficient.) */
	{
		font-family: Choplin;
	}
	#header h2
	{
		font-weight: 900;
		font-family: MuseoSlab;
	}


/* <!-- Main "Body" --> */

#examples, #expertise
{
	padding: 1.125em 1.6875em;
}

#examples button
{
	height: 2.25em;
	margin-bottom:1.125em;
	border: 0;
	white-space: nowrap;
}

	#expertise .dimmed ul
	{
		margin-bottom:1.13em;
	}

#content
{
	overflow: hidden;
}

#content header
{
	margin-bottom: 1.13em;
}

#content header h3 /* (so that my nav-helper tooltips "float" next to the sect.-title text) */
{
	display: inline;
}

#content article
{
	float: left;
}


/* <!-- Footer | Navigation, bottom --> */

#container-footer
{
	clear: both;
}

#footer p
{
	display: inline;
	/*font-family: Choplin;*/
}

#footer h3
{
	float:right;
	display: inline;
}

#footer h5
{
	display: inline;
	line-height: 2.23;
}


/*******************************************************
		my "tooltip" floating nav. helper boxes.
********************************************************/

.tooltip
{
	position: absolute;
	display: none; /*inline*/

	max-width: 280px;
	min-width: 50px;

	margin-right: 1.6875em;
	padding: 1px;

	/*font-family: MuseoSlabItalic;*/ /* (moved up to gen. font-assignment sect.) */
	font-size:14px;
	line-height: 20px;

	color: #000;
	background-color: #ffffff;

	border: 1px solid #ccc;
	border: 1px solid rgba( 0, 0, 0, 0.2 );

	-webkit-border-radius: 6px;
	-moz-border-radius: 6px;
	border-radius: 6px;

	-webkit-box-shadow: 0 5px 10px rgba( 0, 0, 0, 0.2 );
	-moz-box-shadow: 0 5px 10px rgba( 0, 0, 0, 0.2 );
	box-shadow: 0 5px 10px rgba( 0, 0, 0, 0.2 );

	-webkit-background-clip: padding-box;
	-moz-background-clip: padding;
	background-clip: padding-box;
}

.ttip-content
{
	position: relative;
	padding: 9px 14px;
	word-wrap: break-word;
	overflow: hidden;
}



/*****************************
		Media Queries.
******************************/

/* smaller than any device; just to ensure top nav buttons never fall off screen. */

@media screen and ( max-width: 17.5em )
{
	#nav button
	{
		max-width: 71px;
		overflow: hidden;
	}
}

/* 20em (320px) or less */
/* smartphones, iPhone, portrait 480x320 phones */
/* 20em (320px) to 30em (480px) */
/* portrait e-readers (Nook/Kindle), smaller tablets @ 600 or @ 640 wide. */

@media screen and ( max-width: 30em )
{
	body
	{
		font-size: 71.19140625%;
	}

	#container-header h1
	{
		font-size: 212.5%;
	}
	#container-header h2
	{
		font-size: 337.5%;
	}

	#examples article
	{
		width: 100%;
	}
		#examples .box
		{
			overflow: hidden;
		}

	article .dimmed
	{
		padding-bottom: 2.25em;
	}

	article .active
	{
		clear: both;
	}
}

/* portrait tablets, portrait iPad, landscape e-readers, landscape 800x480 or 854x480 phones */
/* 30em (480px) to 40em (640px) */

@media screen and ( min-width: 30em ) and ( max-width: 40em )
{
	body
	{
		font-size: 74.375%;
	}

	#examples article
	{
		width: 100%;
	}
		#examples .box
		{
			overflow: hidden;
		}
}

/* tablet, landscape iPad, lo-res laptops ands desktops */
/* (640px to 960px) */

@media screen and ( min-width: 40em ) and ( max-width: 60em )
{
	body
	{
		font-size: 84.375%;
	}
}

/* big landscape tablets, laptops, and desktops */
/* (960px to 1,280px) */

@media screen and ( min-width: 60em ) and ( max-width: 80em )
{
	body
	{
		font-size: 88.6161%;
	}

	#examples article
	{
		min-width: 49.75%;
		max-width: 50%;
	}
		#examples .box
		{
			overflow: hidden;
		}
}

/* hi-res laptops and desktops */

@media screen and ( min-width: 80em ) and ( max-width: 90em )
{
	body
	{
		font-size: 92.857142857142591836734693878309%;
	}

	#examples article
	{
		min-width: 47.75%;
		max-width: 48%;
	}
		#examples .box
		{
			overflow: hidden;
		}
}

/* print */

@media print and ( max-width: 8.5in )
{
	body
	{
		font-size: 50%;
	}

	#container-nav
	{
		display: none;
	}

	#container-header
	{
		height: auto;
	}

	#examples
	{
		float: right;
		width: 37.78%;
		overflow: hidden;
	}

	#expertise
	{
		float: left;
		width: 54%;
	}

	#container-footer
	{
		font-size: 125%;
		margin-top: .5in;
		clear: both;
	}
}



/************************************
		IE 8 and below fixes.
*************************************/

/* box-sizing polyfill, IE7 and below */

.ie .wrapper
{
	*behavior: url( "http://mikezimmerman.github.io/scripts/boxsizing.htc" );
}

